alteração no titulo do projeto

--- a/trader1.html
+++ b/trader1.html
@@ -1,4 +1,4 @@
-<H1>identificando tipo de jogo</H1>
+<H1>Identificando tipo de jogo</H1>
 <ul>
 <li>super favorito sendo superior</li>
 <li>favorito sendo superior</li>
